# ManiTheBot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
bot/: handlers.py  keyboards.py  states.py
config/: deploy.yml
database/: operations.py
src/: config.py  db.py  diagrams.py  excel.py  gsheet.py  main.py  users.py
utils/: diagrams.py  validators.py
web/: flask_app.py
