[tool.poetry]
name = "manithebot"
version = "0.1.0"
description = ""
authors = ["Maksim Fesenko <drresist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telebot = "^0.0.5"
python-dotenv = "^1.0.1"
plotly = "^5.20.0"
loguru = "^0.7.2"
psycopg2-binary = "^2.9.9"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
